# md2term

./: CHANGELOG.md  README.md  example.md  example_streaming.py  large_test.md  md2term.py  pyproject.toml  requirements.txt  test.md
.cursor/rules/: project-overview.mdc  release-process.mdc  testing-patterns.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
tests/: __init__.py  test_md2term.py
tests/__snapshots__/: test_md2term.ambr
